2010-05-05  Stuart Morgan  <stuartmorgan@chromium.org>

        Reviewed by Darin Fisher.

        Update the plugin container's setFocus implementation to pass the new
        boolean argument to the next layer.

        https://bugs.webkit.org/show_bug.cgi?id=37961

        * src/WebPluginContainerImpl.cpp:
        (WebKit::WebPluginContainerImpl::setFocus):
        * src/WebPluginContainerImpl.h:

2010-05-04  Vangelis Kokkevis  <vangelis@chromium.org>

        Reviewed by Darin Fisher.

        Provide an API for querying whether a WebWidget is using gpu accelerated compositing.
        Also changed: isAcceleratedCompositing to: isAcceleratedCompositingActive.
        https://bugs.webkit.org/show_bug.cgi?id=38220

        * public/WebWidget.h:
        * src/WebPopupMenuImpl.h:
        (WebKit::WebPopupMenuImpl::isAcceleratedCompositingActive):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::WebViewImpl):
        (WebKit::WebViewImpl::paint):
        (WebKit::WebViewImpl::isAcceleratedCompositingActive):
        (WebKit::WebViewImpl::setRootGraphicsLayer):
        (WebKit::WebViewImpl::setIsAcceleratedCompositingActive):
        (WebKit::WebViewImpl::updateRootLayerContents):
        * src/WebViewImpl.h:

2010-04-29  John Gregg  <johnnyg@google.com>

        Reviewed by Dmitry Titov.

        notifications should have dir and replaceId attributes
        https://bugs.webkit.org/show_bug.cgi?id=38336

        * public/WebNotification.h:
        * src/WebNotification.cpp:
        (WebKit::WebNotification::dir):
        (WebKit::WebNotification::replaceId):

2010-05-04  Jay Civelli  <jcivelli@chromium.org>

        Reviewed by David Levin.

        [chromium] Make the select popup not close on right/middle clicks.
        https://bugs.webkit.org/show_bug.cgi?id=38473

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::mouseDown):

2010-05-03  Abhishek Arya  <inferno@chromium.org>

        Reviewed by Adam Barth.
