@@ -48,7 +48,11 @@ public:
     // If path is empty, data will not persist. You should call delete on the returned
     // object when you're finished.
     WEBKIT_API static WebStorageNamespace* createLocalStorageNamespace(const WebString& backingDirectoryPath, unsigned quota);
-    WEBKIT_API static WebStorageNamespace* createSessionStorageNamespace();
+    WEBKIT_API static WebStorageNamespace* createSessionStorageNamespace(unsigned quota);
+    WEBKIT_API static WebStorageNamespace* createSessionStorageNamespace()
+    {
+        return createSessionStorageNamespace(noQuota);
+    }
 
     static const unsigned noQuota = UINT_MAX;
 
